Improvements to code structure and accessibility

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Filipe Almeida</title>
+    <title>Filipe Almeida - .NET Developer</title>
     <base href="/" />
+    <meta name="description" content="Filipe Almeida's personal portfolio website. A .NET developer showcasing his skills and experience." />
+    <meta property="og:title" content="Filipe Almeida - .NET Developer" />
+    <meta property="og:description" content="Filipe Almeida's personal portfolio website. A .NET developer showcasing his skills and experience." />
+    <meta property="og:image" content="https://filipeamda.github.io/icon-192.png" />
+    <meta property="og:url" content="https://filipeamda.github.io/" />
+    <meta name="twitter:card" content="summary_large_image" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="filipealmeida.styles.css" rel="stylesheet" />
